Use `junit-bom`
This replaces independent JUnit5 dependency versioning with a single
`junit-bom` dependency.

--- a/log4j-api-java9/pom.xml
+++ b/log4j-api-java9/pom.xml
@@ -35,6 +35,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
