--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-client/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-client/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-spring-cloud-config</artifactId>
-    <version>2.18.1-SNAPSHOT</version>
+    <version>2.19.0</version>
   </parent>
   <artifactId>log4j-spring-cloud-config-client</artifactId>
   <packaging>jar</packaging>
