--- a/log4j-jul/pom.xml
+++ b/log4j-jul/pom.xml
@@ -63,6 +63,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
     <!-- Required for AsyncLogger testing -->
     <dependency>
