--- a/log4j-api-test/pom.xml
+++ b/log4j-api-test/pom.xml
@@ -94,10 +94,12 @@
     <dependency>
       <groupId>uk.org.webcompere</groupId>
       <artifactId>system-stubs-jupiter</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>uk.org.webcompere</groupId>
       <artifactId>system-stubs-core</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
