--- a/log4j-gctests/pom.xml
+++ b/log4j-gctests/pom.xml
@@ -189,10 +189,12 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
+      <scope>test</scope>
     </dependency>
     <!-- Embedded JDBC drivers for database appender tests -->
     <dependency>
