--- a/log4j-smtp/pom.xml
+++ b/log4j-smtp/pom.xml
@@ -36,8 +36,24 @@
     </dependency>
     <!-- Required for SMTPAppender -->
     <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>javax.activation-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>javax.activation</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.sun.mail</groupId>
       <artifactId>javax.mail</artifactId>
+      <scope>runtime</scope>
     </dependency>
     <!-- Test Dependencies -->
     <dependency>
