Delegates plugin versions to ASF parent
This PR removes all explicitly versioned plugins that are also defined in the
Apache ASF parent POM (`org.apache:apache`).

This has the following effect on plugin versions:

 * `maven-assembly-plugin` bumped to 3.4.1
 * `maven-jar-plugin` bumped to 3.2.2
 * `maven-javadoc-plugin` bumped to 3.4.0
 * `maven-project-info-reports-plugin` bumped to 3.3.0
 * `maven-release-plugin` bumped to 3.0.0-M6
 * `maven-scm-plugin` bumped to 1.13.0
 * `maven-site-plugin` bumped to 3.12.0

--- a/log4j-samples/log4j-samples-configuration/pom.xml
+++ b/log4j-samples/log4j-samples-configuration/pom.xml
@@ -25,6 +25,11 @@
   <artifactId>log4j-samples-configuration</artifactId>
   <packaging>jar</packaging>
   <name>Apache Log4j Samples: Configuration</name>
+  <url>http://maven.apache.org</url>
+  <properties>
+    <module.name>org.apache.logging.log4j.samples.configuration</module.name>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
