--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -40,6 +40,7 @@
     <maven.deploy.skip>true</maven.deploy.skip>
     <maven.site.skip>true</maven.site.skip>
     <maven.site.deploy.skip>true</maven.site.deploy.skip>
+    <module.name>org.apache.logging.log4j.perf</module.name>
   </properties>
 
   <dependencies>
