--- a/log4j-samples/log4j-samples-flume-embedded/pom.xml
+++ b/log4j-samples/log4j-samples-flume-embedded/pom.xml
@@ -27,7 +27,7 @@
   <name>Apache Log4j Samples: Flume - Embedded</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <deploy.plugin.version>2.8.2</deploy.plugin.version>
+    <module.name>org.apache.logging.log4j.samples.flume.embedded</module.name>
   </properties>
   <dependencies>
     <dependency>
@@ -103,7 +103,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>2.5.2</version>
         <configuration>
           <skip>true</skip>
         </configuration>
