--- a/log4j-smtp/pom.xml
+++ b/log4j-smtp/pom.xml
@@ -25,6 +25,7 @@
     <projectDir>/log4j-smtp</projectDir>
     <module.name>org.apache.logging.log4j.smtp</module.name>
     <maven.doap.skip>true</maven.doap.skip>
+    <module.name>org.apache.logging.log4j.smtp</module.name>
   </properties>
 
   <dependencies>
@@ -133,7 +134,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${javadoc.plugin.version}</version>
         <configuration>
           <bottom>&lt;p align="center"&gt;Copyright &amp;#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved.&lt;br /&gt;
             Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, the Apache Logging project logo,
