--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.apache.logging</groupId>
     <artifactId>logging-parent</artifactId>
-    <version>5</version>
+    <version>7</version>
     <relativePath/>
   </parent>
   <description>Apache Log4j 2</description>
@@ -237,36 +237,28 @@
     <!-- POM for jackson-dataformat-xml 2.13.1 depends on woodstox-core 6.2.7 -->
     <woodstox.version>6.3.1</woodstox.version>
     <groovy.version>4.0.2</groovy.version>
-    <compiler.plugin.version>3.10.1</compiler.plugin.version>
     <pmd.plugin.version>3.13.0</pmd.plugin.version>
     <spotbugs.plugin.version>4.0.4</spotbugs.plugin.version>
     <spotbugs.version>4.1.2</spotbugs.version>
     <changes.plugin.version>2.12.1</changes.plugin.version>
-    <javadoc.plugin.version>3.2.0</javadoc.plugin.version>
     <!-- surefire.plugin.version 2.18 yields http://jira.codehaus.org/browse/SUREFIRE-1121, which is fixed in 2.18.1 -->
     <!-- surefire.plugin.version 2.19 yields https://issues.apache.org/jira/browse/SUREFIRE-1193. -->
     <!-- all versions after 2.13 yield https://issues.apache.org/jira/browse/SUREFIRE-720 -->
-    <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
-    <failsafe.plugin.version>2.22.2</failsafe.plugin.version>
+    <surefire.version>3.0.0-M5</surefire.version>
     <checkstyle.plugin.version>3.0.0</checkstyle.plugin.version>
-    <deploy.plugin.version>2.8.2</deploy.plugin.version>
-    <rat.plugin.version>0.13</rat.plugin.version>
     <pdf.plugin.version>1.2</pdf.plugin.version>
     <cobertura.plugin.version>2.7</cobertura.plugin.version>
     <jacoco.plugin.version>0.8.6</jacoco.plugin.version>
-    <release.plugin.version>2.5.3</release.plugin.version>
     <scm.plugin.version>1.9.5</scm.plugin.version>
     <jxr.plugin.version>2.5</jxr.plugin.version>
     <revapi.plugin.version>0.12.2</revapi.plugin.version>
     <revapi.skip>true</revapi.skip>
-    <site.plugin.version>3.8.2</site.plugin.version>
     <!-- Maven site depends on Velocity and the escaping rules are different in newer versions. -->
     <!-- See https://maven.apache.org/plugins/maven-site-plugin/migrate.html -->
     <velocity.plugin.version>1.5</velocity.plugin.version>
     <asciidoc.plugin.version>1.5.6</asciidoc.plugin.version>
     <errorprone.version>2.7.1</errorprone.version>
     <plexus.errorprone.version>2.8.8</plexus.errorprone.version>
-    <remote.resources.plugin.version>1.5</remote.resources.plugin.version>
     <manifestfile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestfile>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
@@ -296,20 +288,7 @@
     <netty-all.version>4.1.80.Final</netty-all.version>
     <wiremock.version>2.34.0</wiremock.version>
   </properties>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>apache</id>
-      <url>https://repository.apache.org/content/repositories/releases/</url>
-    </pluginRepository>
-<!--     <pluginRepository> -->
-<!--       <id>apache.snapshots</id> -->
-<!--       <name>Apache snapshots repository</name> -->
-<!--       <url>http://repository.apache.org/content/groups/snapshots</url> -->
-<!--       <snapshots> -->
-<!--         <enabled>true</enabled> -->
-<!--       </snapshots> -->
-<!--     </pluginRepository>     -->
-  </pluginRepositories>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -330,8 +309,8 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
         <version>${springVersion}</version>
-	<scope>import</scope>
-	<type>pom</type>
+        <scope>import</scope>
+        <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.apache.activemq</groupId>
@@ -1034,7 +1013,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>${compiler.plugin.version}</version>
           <configuration>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
@@ -1078,12 +1056,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${failsafe.plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.0</version>
+          <!-- version inherited from ASF parent POM -->
           <executions>
             <execution>
               <id>default-jar</id>
@@ -1161,11 +1138,6 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${surefire.plugin.version}</version>
-        </plugin>
-        <plugin>
           <groupId>com.github.spotbugs</groupId>
           <artifactId>spotbugs-maven-plugin</artifactId>
           <version>${spotbugs.plugin.version}</version>
@@ -1199,7 +1171,6 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>${rat.plugin.version}</version>
         <configuration>
           <consoleOutput>true</consoleOutput>
           <excludes>
@@ -1269,8 +1240,8 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>3.1.0</version>
       </plugin>
       <!-- DOAP (RDF) metadata generation -->
       <plugin>
@@ -1304,7 +1275,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${failsafe.plugin.version}</version>
         <executions>
           <execution>
             <goals>
@@ -1396,7 +1366,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>${site.plugin.version}</version>
+        <!-- version inherited from ASF parent POM -->
         <dependencies>
           <dependency>
             <groupId>org.apache.maven.wagon</groupId>
@@ -1430,7 +1400,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${surefire.plugin.version}</version>
         <configuration>
           <systemPropertyVariables>
             <java.awt.headless>true</java.awt.headless>
@@ -1507,7 +1476,7 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>${rat.plugin.version}</version>
+        <!-- version inherited from ASF parent POM -->
         <configuration>
           <consoleOutput>true</consoleOutput>
           <excludes>
@@ -1568,7 +1537,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.9</version>
+        <!-- version inherited from ASF parent POM -->
         <reportSets>
           <reportSet>
             <reports>
@@ -1577,10 +1546,10 @@
               <report>dependency-info</report>
               <report>dependency-convergence</report>
               <report>dependency-management</report>
-              <report>project-team</report>
-              <report>mailing-list</report>
-              <report>issue-tracking</report>
-              <report>license</report>
+              <report>team</report>
+              <report>mailing-lists</report>
+              <report>issue-management</report>
+              <report>licenses</report>
               <report>scm</report>
               <report>summary</report>
             </reports>
@@ -1599,7 +1568,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>${surefire.plugin.version}</version>
+        <!-- version specified in ASF parent POM through `surefire.version` -->
         <reportSets>
           <reportSet>
             <id>integration-tests</id>
@@ -1630,11 +1599,8 @@
       <id>www.example.com</id>
       <url>scp://www.example.com/www/docs/project/</url>
     </site>
-    <snapshotRepository>
-      <id>asf-snapshots</id>
-      <name>ASF snapshot repository</name>
-      <url>https://repository.apache.org/content/repositories/snapshots</url>
-    </snapshotRepository>
+    <!-- `repository` from ASF parent POM (id: apache.releases.https) -->
+    <!-- `snapshotRepository` from ASF parent POM (id: apache.snapshots.https) -->
   </distributionManagement>
   <modules>
     <module>log4j-1.2-api</module>
@@ -1786,7 +1752,7 @@
           <plugin>
             <groupId>org.apache.rat</groupId>
             <artifactId>apache-rat-plugin</artifactId>
-            <version>${rat.plugin.version}</version>
+            <!-- version inherited from ASF parent POM -->
             <configuration>
               <consoleOutput>true</consoleOutput>
               <excludes>
