Force Spring Cloud server sample to use current Log4j2 version
The `log4j-spring-cloud-config-sample-server` did not use the Log4j2 parent,
therefore it used a very old 2.13.3 Log4j2 version.

--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/log4j-spring-cloud-config-sample-server/pom.xml
@@ -34,6 +34,8 @@
   </parent>
 
   <properties>
+    <!-- Overrides version from `spring-boot-dependencies` ancestor -->
+    <log4j2.version>${project.version}</log4j2.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <log4jParentDir>${basedir}/../../..</log4jParentDir>
