Revert Maven `dependency:analyze` suggestions

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>org.osgi.framework</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.resource</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
