Use BOMs in `<dependencyManagement>`
This replaces as many managed dependencies as possible with BOMs.

All dependencies (except those specific to unpublished
artifacts/samples) are listed in the main POM as property + dependency
or property + BOM. It is therefore possible to override a dependency
overriding a single property.

--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -43,6 +43,11 @@
         <artifactId>log4j-api</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api-test</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       <!-- Application Service Support -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
@@ -59,6 +64,11 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core-test</artifactId>
         <version>${project.version}</version>
       </dependency>
       <!-- CouchDB Appender Plugin -->
@@ -136,6 +146,11 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-layout-template-json</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-layout-template-json-test</artifactId>
         <version>${project.version}</version>
       </dependency>
       <!-- Liquibase adapter -->
