--- a/log4j-cassandra/pom.xml
+++ b/log4j-cassandra/pom.xml
@@ -34,7 +34,10 @@
     <projectDir>/log4j-cassandra</projectDir>
     <module.name>org.apache.logging.log4j.cassandra</module.name>
     <maven.doap.skip>true</maven.doap.skip>
-    <cassandra-all.version>3.11.13</cassandra-all.version>
+
+    <!-- cassandra-all breaks with a newer version -->
+    <!-- at least this version has one CVE less than the one suggested by Cassandra -->
+    <guava.version>25.1-jre</guava.version>
   </properties>
 
   <dependencies>
@@ -65,7 +68,6 @@
     <dependency>
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-all</artifactId>
-      <version>${cassandra-all.version}</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -81,7 +83,6 @@
     <dependency>
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-thrift</artifactId>
-      <version>3.11.13</version>
       <scope>test</scope>
     </dependency>
     <dependency>
