--- a/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/pom.xml
+++ b/log4j-spring-cloud-config/log4j-spring-cloud-config-samples/pom.xml
@@ -30,13 +30,15 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <revapi.skip>true</revapi.skip>
     <log4jParentDir>${basedir}/../..</log4jParentDir>
+
+    <spring-ws.version>3.1.3</spring-ws.version>
   </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.springframework.ws</groupId>
         <artifactId>spring-ws-core</artifactId>
-        <version>3.1.3</version>
+        <version>${spring-ws.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
