--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -30,9 +30,7 @@
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Core Documentation</docLabel>
     <projectDir>/log4j-core-test</projectDir>
-    <log4j2-logstash-layout.version>0.18</log4j2-logstash-layout.version>
     <maven.doap.skip>true</maven.doap.skip>
-    <graalvm.version>21.3.0</graalvm.version>
   </properties>
   <dependencies>
     <!-- Used for OSGi bundle support -->
@@ -149,12 +147,6 @@
       <artifactId>jctools-core</artifactId>
       <optional>true</optional>
     </dependency>
-    <!-- Zeroconf advertiser tests -->
-    <dependency>
-      <groupId>org.jmdns</groupId>
-      <artifactId>jmdns</artifactId>
-      <version>3.5.8</version>
-    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
@@ -181,7 +173,6 @@
     <dependency>
       <groupId>com.fasterxml.woodstox</groupId>
       <artifactId>woodstox-core</artifactId>
-      <version>5.0.3</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -221,6 +212,12 @@
       <artifactId>hsqldb</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Zeroconf advertiser tests -->
+    <dependency>
+      <groupId>org.jmdns</groupId>
+      <artifactId>jmdns</artifactId>
+      <scope>test</scope>
+    </dependency>
     <!--  GELF -->
     <dependency>
       <groupId>net.javacrumbs.json-unit</groupId>
@@ -231,26 +228,17 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.github.ivandzf</groupId>
       <artifactId>log4j2-custom-layout</artifactId>
-      <version>1.1.0</version>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <!-- For testing log4j 2 2.x plugins -->
     <dependency>
       <groupId>com.vlkan.log4j2</groupId>
       <artifactId>log4j2-logstash-layout</artifactId>
-      <version>${log4j2-logstash-layout.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -290,7 +278,6 @@
     <dependency>
       <groupId>org.graalvm.truffle</groupId>
       <artifactId>truffle-api</artifactId>
-      <version>21.3.0</version>
       <scope>test</scope>
     </dependency>
     <!-- Used for testing HTTP Watcher -->
