--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -30,7 +30,6 @@
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Core Documentation</docLabel>
     <projectDir>/core</projectDir>
-    <log4j2-logstash-layout.version>0.18</log4j2-logstash-layout.version>
     <maven.doap.skip>true</maven.doap.skip>
   </properties>
   <dependencies>
@@ -119,6 +118,12 @@
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <!-- POM for jackson-dataformat-xml depends on woodstox-core -->
+    <dependency>
+      <groupId>com.fasterxml.woodstox</groupId>
+      <artifactId>woodstox-core</artifactId>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
