--- a/log4j-cassandra/pom.xml
+++ b/log4j-cassandra/pom.xml
@@ -34,6 +34,10 @@
     <projectDir>/log4j-cassandra</projectDir>
     <module.name>org.apache.logging.log4j.cassandra</module.name>
     <maven.doap.skip>true</maven.doap.skip>
+
+    <!-- cassandra-all breaks with a newer version -->
+    <!-- at least this version has one CVE less than the one suggested by Cassandra -->
+    <guava.version>25.1-jre</guava.version>
   </properties>
 
   <dependencies>
@@ -69,7 +73,6 @@
     <dependency>
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-all</artifactId>
-      <version>2.2.8</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -83,8 +86,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest</artifactId>
+      <groupId>org.apache.cassandra</groupId>
+      <artifactId>cassandra-thrift</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
