--- a/log4j-core-its/pom.xml
+++ b/log4j-core-its/pom.xml
@@ -40,8 +40,8 @@
   <dependencies>
     <!-- Used for JMS appenders (needs an implementation of course) -->
     <dependency>
-      <groupId>org.jboss.spec.javax.jms</groupId>
-      <artifactId>jboss-jms-api_1.1_spec</artifactId>
+      <groupId>javax.jms</groupId>
+      <artifactId>javax.jms-api</artifactId>
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
@@ -112,7 +112,6 @@
     <dependency>
       <groupId>com.fasterxml.woodstox</groupId>
       <artifactId>woodstox-core</artifactId>
-      <version>5.0.3</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -138,13 +137,11 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-layout-jackson-json</artifactId>
-      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-layout-jackson-xml</artifactId>
-      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <!-- JPA, JNDI and JMS tests -->
@@ -174,7 +171,6 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
       <scope>test</scope>
     </dependency>
     <dependency>
