--- a/log4j-core-its/pom.xml
+++ b/log4j-core-its/pom.xml
@@ -208,7 +208,7 @@
     <!-- Used for testing HttpAppender -->
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
+      <artifactId>wiremock-jre8</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
