--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -296,7 +296,7 @@
     <!-- Used for testing HTTP Watcher -->
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
+      <artifactId>wiremock-jre8</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
